# mssql-tiberius-bridge

./: CHANGELOG.md  Cargo.toml  README.md  codecov.yml  release-plz.toml
.github/workflows/: audit.yml  ci.yml  publish.yml  release-plz.yml
benches/: row_streaming.rs
docs/: connection-examples.md  tiberius-issues-triage.md  upstream-mssql-tds-gaps.md
src/: bulk.rs  bulk_arrow.rs  client.rs  column.rs  config.rs  error.rs  lib.rs  pool.rs  prepared.rs  query.rs  row.rs  serde_de.rs  vector.rs
tests/: aad_token.rs  bulk_arrow.rs  bulk_insert.rs  custom_cert.rs  integration.rs  multi_subnet_failover.rs  prepared_statement.rs  row_stream.rs  ssrp.rs  strict_encryption.rs  tiberius_compat.rs  tier2_repros.rs
