[package]
name = "mssql-tiberius-bridge"
version = "0.1.0-preview.1"
edition = "2021"
description = "A tiberius-compatible API bridge over Microsoft's mssql-tds crate. Migrate from tiberius with minimal code changes."
repository = "https://github.com/saurabh500/mssql-tiberius-bridge"
keywords = ["sql-server", "tds", "mssql", "tiberius", "database"]
categories = ["database"]
license = "MIT"

[dependencies]
mssql-tds = { package = "mssql-tds-preview", version = "=0.1.0-preview.1", default-features = false }
deadpool = "0.12"
chrono = "0.4"
rust_decimal = "1"
uuid = "1"
tokio = { version = "1", features = ["net"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"

[features]
default = []
# Integrated authentication (Kerberos / GSSAPI) on Linux/macOS. Mirrors
# tiberius' `integrated-auth-gssapi` feature. Enables `AuthMethod::Integrated`.
integrated-auth-gssapi = ["mssql-tds/gssapi"]
# Integrated authentication (SSPI / NTLM / Kerberos) on Windows. Mirrors
# tiberius' `winauth` feature. Enables `AuthMethod::Integrated`.
winauth = ["mssql-tds/sspi"]
