[package]
name = "mssql-tiberius-bridge"
version = "0.1.0-preview.5"
edition = "2021"
description = "A tiberius-compatible API bridge over Microsoft's mssql-tds crate. Migrate from tiberius with minimal code changes."
repository = "https://github.com/saurabh500/mssql-tiberius-bridge"
keywords = ["sql-server", "tds", "mssql", "tiberius", "database"]
categories = ["database"]
license = "MIT"

[features]
default = []
time = ["dep:time"]
jiff = ["dep:jiff"]
serde = ["dep:serde"]
arrow = ["dep:arrow-array", "dep:arrow-schema"]
_bench = []

[dependencies]
mssql-tds = { package = "mssql-tds-preview", version = "=0.1.0-preview.5", default-features = false }
deadpool = "0.12"
chrono = "0.4"
rust_decimal = "1"
uuid = "1"
tokio = { version = "1", features = ["net"] }
serde_json = "1"
serde = { version = "1", optional = true }
time = { version = "0.3", optional = true }
jiff = { version = "0.2", optional = true, default-features = false }
arrow-array = { version = "55", optional = true, default-features = false }
arrow-schema = { version = "55", optional = true, default-features = false }
async-trait = "0.1"
thiserror = "2"
futures-core = "0.3"
async-stream = "0.3"

[dev-dependencies]
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
criterion = { version = "0.5", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }

[[bench]]
name = "row_streaming"
harness = false
required-features = ["_bench"]
